# llm-chatbot-backend

./: .env-sample  README.md  main.py  pyproject.toml  scheduler.py
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_web_scraping.yml
docs/source/: conf.py  index.rst
src/llm_chatbot_backend/: __init__.py  __main__.py  settings.py
src/llm_chatbot_backend/datasets/: utf8_json.py
src/llm_chatbot_backend/pipelines/data_processing/: nodes.py  pipeline.py
src/llm_chatbot_backend/pipelines/rag_chatbot/: __init__.py  nodes.py  pipeline.py
src/llm_chatbot_backend/pipelines/web_scraping/: __init__.py  nodes.py  pipeline.py
tests/: test.py
tests/pipelines/data_processing/: test_pipeline.py
tests/pipelines/rag_chatbot/: test_pipeline.py
tests/pipelines/web_scraping/: test_pipeline.py
